--- a/dst/prod/standalone/index.html
+++ b/dst/prod/standalone/index.html
@@ -341,6 +341,7 @@
 
           li {
             font-family: 'Courier New', Courier, monospace;
+            padding: 4px;
 
             b {
               color: var(--primary);
@@ -349,6 +350,7 @@
 
           li[data-focus] {
             color: var(--primary);
+            outline: dashed 1px;
           }
 
           li:hover {
