--- a/index.html
+++ b/index.html
@@ -416,6 +416,12 @@
           text-align: left;
         }
       }
+      edit-resource-definition p {
+        font-size: 80%;
+        color: var(--on-surface-muted);
+        margin: 0;
+        padding: 0;
+      }
 
       .icon-button {
         background-color: var(--surface);
