--- a/index.html
+++ b/index.html
@@ -583,6 +583,7 @@
               <input type="checkbox" id="radar-toggle" checked />
               Show radar.
             </label>
+            <button id="reset-zoom">Reset Zoom</button>
             <label>
               <input type="checkbox" id="critical-paths-toggle" />
               Only show critical paths
