Add cancel button to pred/succ dialog.

--- a/index.html
+++ b/index.html
@@ -670,6 +670,9 @@
         <dialog>
           <h2>Predecessor/Successor</h2>
           <task-search-control></task-search-control>
+          <div class="dialog-footer">
+            <button id="dependency-cancel">Cancel</button>
+          </div>
         </dialog>
       </add-dependency-dialog>
       <edit-resource-definition> </edit-resource-definition>
