Add input color-scheme: dark and rset tabindex=-1 for search results.

--- a/index.html
+++ b/index.html
@@ -490,6 +490,10 @@
       }
 
       body.darkmode {
+        input {
+          color-scheme: dark;
+        }
+
         --primary: hsl(210, 72%, 45%);
         --on-primary: #000000;
         --primary-variant: rgba(59, 114, 177, 0.2);
