Move the new task button.

--- a/index.html
+++ b/index.html
@@ -607,6 +607,7 @@
                 accept="image/png, application/json"
             /></label>
             <button id="catchup">Catch Up</button>
+            <button id="new-task-button">New Task</button>
           </span>
           <button
             id="dark-mode-toggle"
