Spell "Catch Up" the same everywhere.

--- a/dst/prod/standalone/index.html
+++ b/dst/prod/standalone/index.html
@@ -606,8 +606,15 @@
                 id="file-upload"
                 accept="image/png, application/json"
             /></label>
-            <button id="catchup">Catch Up</button>
-            <button id="new-task-button">New Task</button>
+            <button
+              id="catchup"
+              title="Set the completion of all tasks to match today."
+            >
+              Catch Up
+            </button>
+            <button id="new-task-button" title="Create a new task.">
+              New Task
+            </button>
           </span>
           <button
             id="dark-mode-toggle"
@@ -847,7 +854,7 @@
                 title="Set the completion of the task to match today."
                 @click=${async()=>{let e=await this.explanMain.getToday();if(!e.ok){ce(e.error);return}let t=e.value,r=await X(Oo(t,this.taskIndex,this.span),"planDefinitionChanged",!0,this.explanMain);H(r)}}
               >
-                Catchup
+                Catch Up
               </button>
             </label>
           </div>`;case"finished":return k`<div>
