--- a/index.html
+++ b/index.html
@@ -606,8 +606,15 @@
                 id="file-upload"
                 accept="image/png, application/json"
             /></label>
-            <button id="catchup">Catch Up</button>
-            <button id="new-task-button">New Task</button>
+            <button
+              id="catchup"
+              title="Set the completion of all tasks to match today."
+            >
+              Catch Up
+            </button>
+            <button id="new-task-button" title="Create a new task.">
+              New Task
+            </button>
           </span>
           <button
             id="dark-mode-toggle"
