Catch Up -> Catch Up All

--- a/dst/prod/extension/index.html
+++ b/dst/prod/extension/index.html
@@ -610,7 +610,7 @@
               id="catchup"
               title="Set the completion of all tasks to match today."
             >
-              Catch Up
+              Catch Up All
             </button>
             <button id="new-task-button" title="Create a new task.">
               New Task
