Highlight the whold divider when resizing.

--- a/index.html
+++ b/index.html
@@ -186,6 +186,10 @@
           background-size: 4px 4px;
           height: 40px;
         }
+
+        &.dragging {
+          background: var(--surface-2dp);
+        }
       }
 
       panels-parent {
